<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/addName_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name" />

        <EditText
            android:id="@+id/addImageLink_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_image_link" />

        <EditText
            android:id="@+id/addScreenSize_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/screen_size" />

        <EditText
            android:id="@+id/addCountry_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_of_origin" />

        <EditText
            android:id="@+id/addPrice_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/addProcessor_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/processor" />

        <EditText
            android:id="@+id/addMemory_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memory"
            android:inputType="number" />

        <EditText
            android:id="@+id/addOS_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/os" />

        <EditText
            android:id="@+id/addRAM_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ram"
            android:inputType="number" />

        <EditText
            android:id="@+id/addCamera_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/camera" />

        <EditText
            android:id="@+id/addBattery_SP_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/battery"
            android:inputType="number" />
    </LinearLayout>

</ScrollView>