<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/addName_TV_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name" />

        <EditText
            android:id="@+id/addImageLink_TV_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_image_link" />

        <EditText
            android:id="@+id/addScreenSize_TV_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/screen_size" />

        <EditText
            android:id="@+id/addCountry_TV_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_of_origin" />

        <EditText
            android:id="@+id/addPrice_TV_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/addResolutionHD_TV_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hd_resolution" />

        <CheckBox
            android:id="@+id/isSmart_TV_CB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smart_tv" />

        <EditText
            android:id="@+id/addSmartPlatform_TV_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/smart_os"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>